# MBI

./: .gitignore  COMMANDS.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  SUMMARY.md  TASK.md  check_trading_day.py  example_fetch.py  pyproject.toml  requirements.txt  test_installation.py
.github/workflows/: deploy_pages.yml  fetch_daily_data.yml  initialize_historical.yml
data/meta/: nifty_midsmallcap400.csv
data/processed/: market_breadth.csv
data/raw/daily/: 2024-11-22.csv  2024-11-25.csv  2024-11-26.csv  2024-11-27.csv  2024-11-28.csv  2024-11-29.csv  2024-12-02.csv  2024-12-03.csv  2024-12-04.csv  2024-12-05.csv  2024-12-06.csv  2024-12-09.csv  2024-12-10.csv  2024-12-11.csv  2024-12-12.csv  2024-12-13.csv  2024-12-16.csv  2024-12-17.csv  2024-12-18.csv  2024-12-19.csv  2024-12-20.csv  2024-12-23.csv  2024-12-24.csv  2024-12-26.csv  2024-12-27.csv  2024-12-30.csv  2024-12-31.csv  2025-01-01.csv  2025-01-02.csv  2025-01-03.csv  2025-01-06.csv  2025-01-07.csv  2025-01-08.csv  2025-01-09.csv  2025-01-10.csv  2025-01-13.csv  2025-01-14.csv  2025-01-15.csv  2025-01-16.csv  2025-01-17.csv  (+205 more)
data/raw/stocks/: 360ONE.csv  3MINDIA.csv  AADHARHFC.csv  AARTIIND.csv  (+397 more)
site/: app.js  index.html  styles.css
src/: __init__.py  main.py
src/core/: __init__.py  config.py  logger.py  timezone_handler.py
src/fetchers/: __init__.py  index_fetcher.py  yfinance_fetcher.py
src/processors/: __init__.py  breadth_calculator.py  data_validator.py  date_consolidator.py
src/utils/: __init__.py  corporate_actions.py  file_manager.py  holiday_checker.py
